# modelagem_pli_cruzamentos

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml
entradas/caso_1/extras/: conexao.csv
entradas/caso_1/fluxos/: 0.csv  1.csv
entradas/caso_1/grafos_incompatibilidades/: 0.txt
entradas/caso_2/extras/: conexao.csv
entradas/caso_3/extras/: conexao.csv
entradas/caso_3/fluxos/: 0.csv  1.csv  2.csv  3.csv
entradas/caso_4/fluxos/: 0.csv  1.csv  2.csv  3.csv
reports/: coverage.xml  junit.xml
tcc/: calculos.py  cruzamento.py  grafo.py  grupo_movimento.py  load_data.py  main.py
tcc/linear_programming/: model.py  print_infos.py
tests/: test_calculos.py  test_grafo.py  test_grupo_movimento.py  test_load_data.py
tests/files/: conn.csv
tests/linear_programming/: test_model.py
